# lunabotics

./: .gitignore  .gitmodules  README.md  camera.launch.py  cyclonedds.xml  frames_2026-03-20_00.04.32.gv  frames_2026-04-12_22.31.02.gv  how_to_run_python.txt  libuvc_installation.sh  nav_script  pyproject.toml  python_path.txt  run_controller.ps1  test.yaml  testing.txt
Base_Station/ROS2/subscriber/node_subscribers/: temp_subscriber.py
Jetson/: python_path_local_backup.txt
Jetson/ROS2/: run_temp_publish.py
Jetson/ROS2/base/: base_publisher.py
Jetson/ROS2/nodes_publish/: temp_publisher.py
Jetson/ROS2/publisher/base/: base_publisher.py
Jetson/ROS2/subscriber/node_subcribers/: temp_subscriber.py
Media/: nav2.mp4:Zone.Identifier  ros_structure.drawio
Media/drawio/: high level data flow.drawio
ROS2/: base_node.py
ROS2/config/: ros2MultiMachineConfig.txt
ROS2/publisher/: base_publisher.py  camera_publisher.py  run_temp_publish.py  temp_publisher.py
ROS2/publisher/base/: base_publisher.py
ROS2/subscriber/: camera_subscriber.py
ROS2/subscriber/base/: base_subscriber.py
TF_Tree/: frames_2026-03-01_17.22.35.gv
comms/: metrics_forwarder.py  text_to_local_host_8888.py
comms/ROS_comms/: example.py  publisher.py  temp_publisher.py
comms/ROS_comms/apps/: publish_timer.py
comms/ROS_comms/config/: topics.yaml
comms/ROS_comms/roscomms/: __init__.py  adapters.py  core.py  factory.py  qos.py
comms/templates/: rockpi_metrics.html
dds/: cyclone.xml  cyclone_disabled_multicast.xml  cyclone_disabled_multicast_wsl.xml  cyclone_multicast.xml  cyclone_multicast_disabled_multicast_UNUSED.xml  cyclone_multicast_disabled_multicast_wsl_UNUSED.xml  cyclone_multicast_server.xml  cyclone_multicast_server_P1p1s0.xml  cyclone_multicast_server_eno1.xml  cyclone_multicast_wsl.xml  cyclone_vpn.xml  cyclonedds.xml  selector.py  server_cyclonedds.xml
hardware/: diffbot_system.cpp
hardware/include/diffdrive_canbus/: CAN_comms.hpp  visibility_control.h
luna_ws/: README.md  README_rviz.md  cones_map_serial.data  rebuild.txt
luna_ws/src/: topic_echo_cmd.txt
luna_ws/src/basestation/: Dockerfile  docker-compose.yaml  readme.md  setup.py
luna_ws/src/basestation/basestation/: main.py  requirements.txt  test_node.py
luna_ws/src/luna_rviz/: setup.py
luna_ws/src/luna_rviz/launch/: rviz.launch.py
luna_ws/src/luna_rviz/rviz/: rover.rviz
luna_ws/src/luna_sim/: package.xml  setup.cfg  setup.py
luna_ws/src/luna_sim/config/: gazebo_ros2_control.yaml  imu_params.yaml  mapper_params_online_async.yaml  my_controllers.yaml  ros2_control_controllers.yaml
luna_ws/src/luna_sim/description/: depth_camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  lidar_2d.xacro  ros2_control.xacro  rover.urdf.xacro  rover_core.xacro
luna_ws/src/luna_sim/launch/: gazebo_rover.launch.py  gazebo_with_rviz.launch.py  rsp.launch.py  rviz_rover.launch.py
luna_ws/src/luna_sim/rviz/: rover.rviz
luna_ws/src/luna_sim/worlds/: arena_with_cones.world  cones.world  obstacle_arena.world
luna_ws/src/lunabotics_control/: package.xml
luna_ws/src/lunabotics_control/lunabotics_control/: diffdrive_sim.py
luna_ws/src/lunabotics_description/: package.xml  setup.cfg  setup.py
luna_ws/src/lunabotics_description/launch/: gazebo_rover.launch.py  rviz_rover.launch.py
luna_ws/src/lunabotics_description/rviz/: rover.rviz
luna_ws/src/lunabotics_sensors/: package.xml  setup.py
luna_ws/src/lunabotics_sensors/lunabotics_sensors/: rpm_publisher.py  temp_publisher.py
lunabotics/basestation/controls/: constants.py  control_maps.py  desktop_controller.py  mock_publisher.py  physical_controller.py
lunabotics/basestation/controls/controllers/: base_controller.py  base_station_state.py  desktop_controller.py  physical_controller.py
lunabotics/basestation/controls/experimental/: hid_controller.py
lunabotics/basestation/physical_controller/: test.py
lunabotics/basestation/physical_controller/experimental/: experimental_for_mac.py
lunabotics/basestation/ui/: main.py
lunabotics_ws/: docker-compose.yml
lunabotics_ws/src/basestation/: setup.py
process/: build.sh  clean_build.sh  env.sh  install_packages.sh  networking_limits.sh  shortcuts.sh  startup.sh  startup_headless.sh
process/build_stages/: build.sh  package_install.sh
process/functions/: build.sh  cameras.sh  executables.sh  install_packages.sh  networking.sh  orbbec_sdk.sh  teleop.sh
process/run_stages/: rviz.sh  sim.sh  test_controller.sh
qpl_ws/: DnR.md  Jetson RealSense setup.md  Jetson TBF Compilation.md  README.md  cones_map.pgm  cones_map_save.pgm  cones_map_save.yaml
qpl_ws/Log/camera/: OrbbecSDK.log.txt
qpl_ws/src/basestation/: docker_entrypoint.sh  package.xml  readme.md  run_controller.ps1  setup.py  setup_controller.ps1
qpl_ws/src/diffdrive_canbus/: CMakeLists.txt  README.md  diffdrive_canbus.xml  package.xml  sparkmax_params.txt
qpl_ws/src/diffdrive_canbus/bringup/config/: diffbot_controllers.yaml
qpl_ws/src/diffdrive_canbus/bringup/launch/: diffbot.launch.py
qpl_ws/src/diffdrive_canbus/description/urdf/: diffbot.urdf.xacro  diffbot_core.xacro
qpl_ws/src/diffdrive_canbus/hardware/: CAN_comms.cpp  Velocity_Controller.cpp  diffbot_system.cpp  diffdrive_canbus_system.cpp  spark_max.cpp  spark_max_class_test.cpp  spark_max_test.cpp
qpl_ws/src/diffdrive_canbus/hardware/include/diffdrive_canbus/: CAN_comms.cpp  CAN_comms.hpp  Velocity_Controller.hpp  diffbot_system.hpp  diffdrive_canbus_system.hpp  spark_max.hpp  wheel.hpp
qpl_ws/src/luna_rviz/: package.xml  setup.cfg  setup.py
qpl_ws/src/qpl_autonomy/: package.xml  setup.cfg  setup.py
qpl_ws/src/qpl_rover/: package.xml  setup.cfg  setup.py
ros2/: README_LUNABOTICS_ROS2.md
ros2/lunabotics_description/: setup.py
ros2/lunabotics_description/launch/: view_rover.launch.py
ros2/lunabotics_description/rviz/: rover.rviz
ros2/scr/lunabotics_control/: move_in_circle.txt
ros2/src/lunabotics_control/: setup.py
ros2/src/lunabotics_description/: setup.py
ros2/src/lunabotics_sensors/: setup.cfg  setup.py
(+173 files in other folders)
